--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -207,7 +207,7 @@ a {
 }
 
 a:hover {
-	color: #fff
+	color: #B367FF
 }
 
 a:focus, a:hover, .portfolio-cat a:hover, .footer -menu li a:hover {
@@ -7425,4 +7425,66 @@ b, sup, sub, u, del {
 	{
 	display: flex;
 	align-items: center
+}
+
+/* 여기에 추가로 커스텀 CSS 추가함 2021 09 16 문성원 */
+.progress-table .country a:link {
+   color: black;
+   text-decoration: none;
+}
+.progress-table .country a:visited {
+   color: #000055;
+   text-decoration: none;
+}
+.progress-table .country a:hover {
+   color: #595959;
+   text-decoration: none;
+}
+.progress-table .country a:active {
+   color: #414141;
+   text-decoration: none;
+}
+
+/* 여기에 추가로 커스텀 CSS 추가함 2021 09 15 문성원 */
+.progress-table .freeboardCnt {
+   width: 11.83%;
+   padding-right: 30px
+}
+
+/* 여기에 추가로 커스텀 CSS 추가함 2021 09 15 문성원 */
+.progress-table .freeboardDate {
+   width: 19.74%
+}
+
+/* 이 부분  CSS 안쓰는 부분 주석처리함. 문성원 21-09-16 */
+.single-post-area .navigation-area {
+   /* border-bottom: 1px solid #eee; */
+   padding-bottom: 30px;
+   margin-top: 55px
+}
+
+/* 여기에 추가로 커스텀 CSS 추가함 2021 09 15 문성원 */
+.progress-table .table-head .serial, .progress-table .table-head .country,
+   .progress-table .table-head .visit, .progress-table .table-head .percentage, 
+   .progress-table .table-head .freeboardDate, .progress-table .table-head .freeboardCnt 
+   {
+   color: #415094;
+   line-height: 40px;
+   text-transform: uppercase;
+   font-weight: 500
+}
+
+.progress-table .table-row {
+   padding: 15px 0;
+   border-top: 1px solid #edf3fd;
+   display: flex
+}
+
+/* 여기에 추가로 커스텀 CSS 추가함 2021 09 15 문성원 */
+.progress-table .table-row .serial, .progress-table .table-row .country,
+   .progress-table .table-row .visit, .progress-table .table-row .percentage, 
+   .progress-table .table-row .freeboardDate, .progress-table .table-row .freeboardCnt 
+   {
+   display: flex;
+   align-items: center
 }
