--- a/src/main/webapp/resources/css/qna_frequently.css
+++ b/src/main/webapp/resources/css/qna_frequently.css
@@ -12,7 +12,7 @@
 
 .qna .box.text {
   padding: 20px 50px;
-  border: 1px solid #ccc;
+  border: 2px solid #f15d30;;
   border-radius: 10px;
   margin-bottom: 20px;
   text-align: center;
