--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -2859,7 +2859,7 @@ keyframes zoom { 0%{
 }
 
 .mobile_menu .slicknav_menu .slicknav_btn .slicknav_icon-bar {
-	background-color: #B367FF !important
+	background-color: #f15d30 !important
 }
 
 .mobile_menu .slicknav_menu .slicknav_nav {
